--- a/index.css
+++ b/index.css
@@ -60,19 +60,20 @@
     background-color: rgb(255, 179, 128);
     width:  9%;
     height: 15%;
-    left: 43.5%;
+    left: 42%;
     top: 3.5%;
 }
 
 #box7 {
     position: absolute;z-index: 9;
     background-color: beige;
-    width: 15%;
-    height: 27%;
-    left: 52.5%;
+    max-width: 300px;
+    max-height: 300px;
+    width: 100%;
+    height: 100%;
+    left: 51%;
     top: 18.8%;
-    background-size: cover
-;
+    background-size: cover;
 }
 
 #box8 {
